<resources>
    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    // Définition des valeurs liées a la calculatrice
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">AC</string>
    <string name="substract">-</string>
    <string name="add">+</string>
    <string name="multiply">x</string>
    <string name="divide">÷</string>
    <string name="equals">=</string>
    <string name="point">,</string>
    <string name="plusMinus">+/-</string>
    <string name="modulo">%</string>

</resources>